add animation & Timer script

--- a/assets/style/common.css
+++ b/assets/style/common.css
@@ -210,6 +210,22 @@ input[type="text"]::placeholder {
   white-space: nowrap;
 }
 
+/* Custom Animation */
+@keyframes fadeInUp {
+  from {transform: translate3d(0, 40px, 0)}
+  to {transform: translate3d(0, 0, 0); opacity: 1}
+}
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+.fadeInUp {
+  opacity: 0;
+  animation-name: fadeInUp;
+}
+
 /* Media: Tablet */
 @media (max-width: 1023px) {
 
